<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InclinedGainedFragment">

    <EditText
        android:id="@+id/editTextGradePercent"
        android:layout_width="116dp"
        android:layout_height="73dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="166dp"
        android:ems="10"
        android:inputType="number|textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heading" />

    <EditText
        android:id="@+id/editTextDistance"
        android:layout_width="117dp"
        android:layout_height="67dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="number|textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button_compute"
        app:layout_constraintEnd_toStartOf="@+id/ftOrMeters"
        app:layout_constraintStart_toEndOf="@+id/textview_distance"
        app:layout_constraintTop_toBottomOf="@+id/editTextGradePercent" />

    <TextView
        android:id="@+id/textview_gradePct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="25dp"
        android:text="@string/grade_percent"
        app:layout_constraintEnd_toStartOf="@+id/editTextGradePercent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_heading" />

    <Button
        android:id="@+id/button_compute"
        android:layout_width="119dp"
        android:layout_height="59dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="166dp"
        android:autoText="false"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDistance" />

    <TextView
        android:id="@+id/textview_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="67dp"
        android:text="@string/distance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_gradePct" />

    <TextView
        android:id="@+id/textView_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="84dp"
        android:text="@string/heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/editTextGradePercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_compute" />

    <Spinner
        android:id="@+id/ftOrMeters"
        android:layout_width="141dp"
        android:layout_height="65dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="176dp"
        app:layout_constraintStart_toEndOf="@+id/editTextDistance"
        app:layout_constraintTop_toBottomOf="@+id/textView_heading" />

</androidx.constraintlayout.widget.ConstraintLayout>