<resources>
    <string name="app_name">Height Gained</string>
    <string name="action_settings">Settings</string>
    <string name="next">Compute</string>
    <string name="rise_feet_result">Height Gained (in feet)</string>
    <string name="rise_metre_result">Height Gained (in meters)</string>
    <string name="use_metric_choice">Metric System</string>
    <string name="heading">Height Gained Calculator</string>

    <string name="grade_percent">Grade in %</string>

    <string name="distance">Distance</string>
</resources>